--- a/README.rdoc
+++ b/README.rdoc
@@ -18,9 +18,10 @@ Then you can include an SVG reference HTML object via liquid tag:
 
   {% svg svg/mygraph.svg %}
 
-Note that both an *.svg and *.png are expected at the specified
-location. The later is used as a fallback and also to obtain
-dimensions (via imagesize gem, pure ruby) from the png file.
+Where the referenced file is relative to the current page, or to the
+site source if absolute. Note that both an *.svg and *.png are
+expected at the specified location. The PNG file is used as a fallback
+and also to obtain dimensions (via imagesize gem, pure ruby).
 
 I typically use Graphviz dot to generate my SVG/PNG graphs, with a Rakefile like this:
 
