--- a/History.rdoc
+++ b/History.rdoc
@@ -1,4 +1,6 @@
 === 1.1.0 (TBD)
+* Support relative or site-absolute svg/png file paths.
+* Use <img/> empty tag for XHTML compatibility.
 
 === 1.0.0 (2010-8-14)
 * Initial release.
