--- a/History.rdoc
+++ b/History.rdoc
@@ -1,4 +1,5 @@
 === 1.1.0 (TBD)
+* Replace imagesize gem with maintained image_size ~> 1.0.3.
 * Support relative or site-absolute svg/png file paths.
 * Use <img/> empty tag for XHTML compatibility.
 
