--- a/README.rdoc
+++ b/README.rdoc
@@ -44,7 +44,7 @@ I typically use Graphviz dot to generate my SVG/PNG graphs, with a Rakefile like
 
 == License
 
-Copyright (c) 2010 David Kellum
+Copyright (c) 2010-2011 David Kellum
 All rights reserved.
 
 Permission is hereby granted, free of charge, to any person obtaining
